@@ -1,3 +1,5 @@
+	* remove potentially privacy leaking extension (non-anonymous mode)
+	* peer-id connection ordering fix in anonymous mode
 	* mingw fixes
 
 1.0.2 release
